# git-does-not-cost-life

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config_init_simple.py  fix_typing.py  git-submit-cli.py  git-submit-fixed.py  git-submit-simple.py  git-submit-working.py  git-submit.bat  git-submit.cmd  git_submit_wrapper.py  pyproject.toml  test_basic.py
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
docs/: CONFIG_REFERENCE.md  TROUBLESHOOTING.md
openspec/changes/auto-github-submit-retry/: design.md  proposal.md  tasks.md
openspec/changes/auto-github-submit-retry/specs/cli-interface/: spec.md
openspec/changes/auto-github-submit-retry/specs/github-submit-retry/: spec.md
openspec/changes/auto-github-submit-retry/specs/notification-system/: spec.md
scripts/: release.py  test_config_init.py
src/git_submit/: __init__.py  __main__.py  cli.py  cli_args.py  cli_wrapper.py  config.py  config_commands.py  config_loader.py  git_wrapper.py  log_handler.py  notifications.py  retry_engine.py  state_manager.py  status_commands.py
tests/: test_config.py  test_retry_engine.py  test_state_manager.py
